change class for item-slot header to fix bux when header name overflow y-axis (more than 5 characters)

--- a/templates/actor/character-sheet.html
+++ b/templates/actor/character-sheet.html
@@ -138,7 +138,7 @@
       <div class="item-row item-head-row">
         <div></div>
         <div class="item-name">{{localize "mainSheet.rightColumn.itemHeaderName"}}</div>
-        <div class="item-slots item-full-centerer">{{localize "mainSheet.rightColumn.itemHeaderSlots"}}</div>
+        <div class="item-slots-header item-full-centerer">{{localize "mainSheet.rightColumn.itemHeaderSlots"}}</div>
         <div class="item-controls add-item">
           <a class="item-create" title="Create item" data-type="item"><i class="fas fa-plus"></i></a>
         </div>
