--- a/templates/actor/monster-sheet.html
+++ b/templates/actor/monster-sheet.html
@@ -12,32 +12,32 @@
 
         <div class="attributes">
             <div class="centerer monster-attribute">
-                {{localize "monsterSheet.hitDiceLabel"}}
+                <span>{{localize "monsterSheet.hitDiceLabel"}}</span>
                 <input type="text" name="data.attributes.hitdice.amount" value="{{data.attributes.hitdice.amount}}">
             </div>
 
             <div class="centerer monster-attribute">
-                {{localize "monsterSheet.currentHPLabel"}}
+                <span>{{localize "monsterSheet.currentHPLabel"}}</span>
                 <input type="text" name="data.health.value" value="{{data.health.value}}">
             </div>
 
             <div class="centerer monster-attribute">
-                {{localize "monsterSheet.maxHPLabel"}}
+                <span>{{localize "monsterSheet.maxHPLabel"}}</span>
                 <input type="text" name="data.health.max" value="{{data.health.max}}">
             </div>
 
             <div class="centerer monster-attribute">
-                {{localize "monsterSheet.multiplierLabel"}}
+                <span>{{localize "monsterSheet.multiplierLabel"}}</span>
                 <input type="text" name="data.attributes.hitdice.multiplier" value="{{data.attributes.hitdice.multiplier}}">
             </div>
 
             <div class="centerer monster-attribute">
-                {{localize "monsterSheet.armorClassLabel"}}
+                <span>{{localize "monsterSheet.armorClassLabel"}}</span>
                 <input type="text" name="data.attributes.armorclass" value="{{data.attributes.armorclass}}">
             </div>
 
             <div class="centerer monster-attribute">
-                {{localize "monsterSheet.moraleLabel"}}
+                <span>{{localize "monsterSheet.moraleLabel"}}</span>
                 <input type="text" name="data.attributes.morale" value="{{data.attributes.morale}}">
             </div>
 
