add localization to item sheets

--- a/templates/actor/monster-sheet.html
+++ b/templates/actor/monster-sheet.html
@@ -3,7 +3,7 @@
     <div class="monster-grid">
 
         <div class="name">
-            <input type="text" name="name" value="{{actor.name}}" data-dtype="String" placeholder="Name..." />
+            <input type="text" name="name" value="{{actor.name}}" data-dtype="String" placeholder="{{localize "monsterSheet.namePlaceHolder"}}" />
         </div>
 
         <div class="profile-img">
