--- a/templates/item/item-item-sheet.html
+++ b/templates/item/item-item-sheet.html
@@ -8,7 +8,7 @@
 
         <div class="item-attribute-cell">
             <div class="item-attr-label">
-                <label for="data.slotstaken">Slots Used</label>
+                <label for="data.slotstaken">{{localize "itemSheet.slotsUsed"}}</label>
             </div>
             <div class="item-attr-label">
                 <input type="text" name="data.slotstaken" value="{{data.slotstaken}}">
@@ -17,16 +17,16 @@
 
         <div class="item-attribute-cell">
             <div class="item-attr-label">
-                <label for="data.quantity">Quantity</label>
+                <label for="data.quantity">{{localize "itemSheet.quantity"}}</label>
             </div>
             <div class="item-attr-label">
                 <input type="text" name="data.quantity" value="{{data.quantity}}">
             </div>
         </div>
-        
+
         <div class="item-attribute-cell">
             <div class="item-attr-label">
-                <label for="data.quality">Quality</label>
+                <label for="data.quality">{{localize "itemSheet.quality"}}</label>
             </div>
             <div class="item-attr-label">
                 <input type="text" name="data.quality" value="{{data.quality}}">
@@ -36,7 +36,7 @@
 
 
         <div class="item-desc-label">
-            Description
+            {{localize "itemSheet.description"}}
         </div>
 
 
