--- a/templates/item/item-rules-sheet.html
+++ b/templates/item/item-rules-sheet.html
@@ -3,9 +3,9 @@
 
 
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
-        
+
         <div class="centerer rule-name">
-            <input name="name" type="text" value="{{item.name}}" placeholder="Name"/>
+            <input name="name" type="text" value="{{item.name}}" placeholder="{{localize "itemSheet.name"}}"/>
         </div>
 
         {{!-- Description Tab --}}
