--- a/templates/item/item-sheet.html
+++ b/templates/item/item-sheet.html
@@ -2,14 +2,14 @@
     <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
         <div class="header-fields">
-            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="Name"/></h1>
+            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{localize "itemSheet.name"}}"/></h1>
         </div>
     </header>
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="description">Description</a>
-        <a class="item" data-tab="attributes">Attributes</a>
+        <a class="item" data-tab="description">{{localize "itemSheet.description"}}</a>
+        <a class="item" data-tab="attributes">{{localize "itemSheet.attributes"}}</a>
     </nav>
 
     {{!-- Sheet Body --}}
